--- a/res/layout/ccl_intro_overlay.xml
+++ b/res/layout/ccl_intro_overlay.xml
@@ -37,7 +37,7 @@
     <ImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@drawable/ic_cast_white"
+        android:src="@drawable/ic_cast_white_big"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/textTitle"
         android:gravity="center"
